[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Art/Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Art/Fonts/Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PlayerTransitionOverlay.gd" type="Script" id=3]
[ext_resource path="res://Scripts/bt_exit_to_desktop.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 125
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0314837, 0.00545805, 0.00545805, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TransitionOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TranslucentBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.278431, 0.278431, 0.278431, 0.705882 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = 128.0
margin_right = -192.0
margin_bottom = -128.0
rect_min_size = Vector2( 850, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 48
alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
margin_right = 896.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_constants/shadow_as_outline = 50
custom_fonts/font = SubResource( 1 )
text = "BOSS KILLED"
align = 1
valign = 1
uppercase = true
max_lines_visible = 1

[node name="ButtonVBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 896.0
margin_bottom = 559.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="bt_continue" type="Button" parent="VBoxContainer/ButtonVBoxContainer"]
margin_right = 896.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "CONTINUE"

[node name="bt_replay_level" type="Button" parent="VBoxContainer/ButtonVBoxContainer"]
margin_top = 96.0
margin_right = 896.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "REPLAY LEVEL"

[node name="bt_main_menu" type="Button" parent="VBoxContainer/ButtonVBoxContainer"]
margin_top = 192.0
margin_right = 896.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "MAIN MENU"

[node name="bt_exit_to_desktop" type="Button" parent="VBoxContainer/ButtonVBoxContainer"]
margin_top = 288.0
margin_right = 896.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "EXIT TO DESKTOP"
script = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/ButtonVBoxContainer/bt_continue" to="." method="_on_bt_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonVBoxContainer/bt_replay_level" to="." method="_on_bt_replay_level_pressed"]
[connection signal="button_up" from="VBoxContainer/ButtonVBoxContainer/bt_main_menu" to="." method="_on_bt_leave_game_button_up"]
[connection signal="button_up" from="VBoxContainer/ButtonVBoxContainer/bt_exit_to_desktop" to="." method="_on_bt_exit_to_desktop_button_up"]
